# TargetSim

./: AnalysisManager.cc  AnalysisManager.hh  CMakeLists.txt  EventAction.cc  EventAction.hh  MCParticle.cc  MCParticle.hh  MCTruthManager.cc  MCTruthManager.hh  README.md  Sr90_spectrum.root  TrackingAction.cc  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  run.mac  sim.cc  vis.mac
eval/: Run.sh  macro.C
